<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_drawable"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:text="@string/login_string"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:background="@drawable/custom_button_two"
        android:ems="10"
        android:hint="@string/mail_string"
        android:inputType="textPersonName"
        android:paddingLeft="12dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/userPass"
        android:layout_width="280dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/pass_string"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:paddingLeft="12dp"
        android:background="@drawable/custom_button_two"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="4dp"

        app:layout_constraintEnd_toEndOf="@+id/userEmail"
        app:layout_constraintStart_toStartOf="@+id/userEmail"
        app:layout_constraintTop_toBottomOf="@+id/userEmail" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="65dp"
        android:text="@string/login_string"
        android:textSize="12sp"
        android:textColor="#fff"
        android:background="@drawable/custom_button"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/userPass"
        app:layout_constraintStart_toStartOf="@+id/userPass"
        app:layout_constraintTop_toBottomOf="@+id/userPass" />

    <TextView
        android:id="@+id/newAccount"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/new_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_string"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/userPass"
        app:layout_constraintTop_toBottomOf="@+id/userPass" />

</androidx.constraintlayout.widget.ConstraintLayout>